--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Two Activities</string>
     <string name="button_main">SEND</string>
+
+    <string name="text_header">Message Received</string>
 </resources>
