--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="button_main">SEND</string>
 
     <string name="text_header">Message Received</string>
+    <string name="editText_main">Enter Your Message Here</string>
 </resources>
