--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,21 +1,12 @@
-<?xml version="1.0"?>
-
-    <resources>
-
-    <string name="app_name">Two Activities</string>
-
-    <string name="text_one">Text One</string>
-
-    <string name="text_two">Text Two</string>
-
-    <string name="text_three">Text Three</string>
-
-    <string name="display_one">This is an example text</string>
-
-    <string name="display_two">This is another example text</string>
-
-    <string name="display_three">This is one more sample text</string>
-
-    <string name="activity2_name">This is another text</string>
-
+<resources>
+    <string name="app_name">Hello Toast</string>
+    <string name="button_label_toast">Hello Toast!</string>
+    <string name="count_initial_value">0</string>
+    <string name="button_label_count">Count</string>
+    <string name="text1">Half screen TextView (This is for the small coding challenge)</string>
+    <string name="text2">Small TextView</string>
+    <string name="toast_message">Hello Toast!</string>
+    <string name="say_hello">Say Hello</string>
+    <string name="hello">Hello</string>
+    <string name="number">0</string>
 </resources>
